信息录入二级页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         </activity>
 
         <activity android:name=".view.WebViewActivity"></activity>
+        <activity android:name=".view.InfoInputActivity"></activity>
     </application>
 
 </manifest>
