Rejected commit: Default

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
         <activity android:name=".view.InfoInputActivity"></activity>
         <activity android:name=".view.me.MeStoreActivity"></activity>
         <activity android:name=".view.me.LoginActivity"></activity>
+        <activity android:name=".view.me.LoginCheckActivity"></activity>
+        <activity android:name=".view.me.RegisterActivity"></activity>
         <activity android:name=".view.home.SuccessExampleActivity"></activity>
     </application>
 
