--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,13 +47,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.home.HomeActivity"/>
+        <activity android:name=".view.home.HomeActivity" android:launchMode="singleTask"/>
         <activity android:name=".view.WebViewActivity"></activity>
         <activity android:name=".view.InfoInputActivity"></activity>
         <activity android:name=".view.me.MeStoreActivity"></activity>
         <activity android:name=".view.me.LoginActivity"></activity>
         <activity android:name=".view.me.LoginCheckActivity"></activity>
         <activity android:name=".view.me.RegisterActivity"></activity>
+        <activity android:name=".view.me.MeInfoActivity"></activity>
+        <activity android:name=".view.ListActivity"></activity>
         <activity android:name=".view.home.SuccessExampleActivity"></activity>
         <activity android:name=".view.progress.ProgressDetailActivity"/>
     </application>
