--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,9 @@
         <activity android:name=".view.me.RegisterActivity"></activity>
         <activity android:name=".view.me.MeInfoActivity"></activity>
         <activity android:name=".view.me.PromotionResultActivity"></activity>
+        <activity android:name=".view.me.MeCheckListActivity"></activity>
         <activity android:name=".view.ListActivity"></activity>
+
         <activity android:name=".view.home.SuccessExampleActivity"></activity>
         <activity android:name=".view.progress.ProgressDetailActivity"/>
 
