--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
     <application
         android:name=".app.FSApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -59,16 +59,19 @@
         <activity android:name=".view.me.LoginCheckActivity"></activity>
         <activity android:name=".view.me.RegisterActivity"></activity>
         <activity android:name=".view.me.MeInfoActivity"></activity>
-        <activity android:name=".view.me.PromoterResultActivity"></activity>
         <activity android:name=".view.me.NormalCheckListActivity"></activity>
-        <activity android:name=".view.me.PromoterCheckListActivity"></activity>
+        <activity android:name=".view.me.ShopListActivity"></activity>
         <activity android:name=".view.ListActivity"></activity>
         <activity android:name=".view.me.ShopDetailActivity"></activity>
-
-
+        <activity android:name=".view.me.ShopAddEmpActivity"></activity>
+        <activity android:name=".view.me.AboutUsActivity"></activity>
+        <activity android:name=".view.me.EditPassActivity"></activity>
+        <activity android:name=".view.me.ForgetMobileActivity"></activity>
+        <activity android:name=".view.me.ForgetPasswordActivity"></activity>
         <activity android:name=".view.home.SuccessExampleActivity"></activity>
+        <activity android:name=".view.me.AchievementActivity"></activity>
+        <activity android:name=".view.me.AchievementListActivity"></activity>
         <activity android:name=".view.progress.ProgressDetailActivity"/>
-
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
